--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-websocket:2.5.3'
     implementation 'org.springframework.boot:spring-boot-starter-amqp:2.5.3'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'net.javacrumbs.shedlock:shedlock-spring:2.2.0'
+    implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:2.1.0'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.3'
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     testCompileOnly 'org.projectlombok:lombok:1.18.20'
