--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,14 +1,14 @@
 spring:
   datasource:
     username: postgres
-    password: postgres
-    url: jdbc:postgresql://172.17.0.3:5432/account
+    password: Pass2021
+    url: jdbc:postgresql://yk-pc-l-1:5432/account
   jpa:
     hibernate:
       ddl-auto: none
     generate-ddl: false
   rabbitmq:
-    addresses: 172.17.0.2:5672
+    addresses: yk-pc-l-1:5672
 
   liquibase:
     change-log: classpath:liquibase/changelog-master.yml
