Task5: add new db url for kubernetes

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     username: postgres
-    password: 68ugPBw41b
-    url: jdbc:postgresql://localhost:5432/account
+    password: bHa8Hn9OBm
+    url: jdbc:postgresql://localhost:5433/account
   jpa:
     hibernate:
       ddl-auto: none
